# DepNova

./: README.md  demo_run.py  depnova.yaml  pyproject.toml
demo-app/: package.json  pom.xml  requirements.txt
demo-app/depnova-reports/: dependencies.csv  report.html  sbom.cdx.json
demo-app/public/: admin.html  index.html
demo-app/public/js/: app.bundle.js.map
demo-app/templates/: index.html  login.html
depnova/: __init__.py  cli.py
depnova.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
depnova/core/: __init__.py  config.py  engine.py  models.py  plugin_loader.py  purl.py
depnova/plugins/: __init__.py  base.py
depnova/plugins/fingerprinters/: __init__.py  retirejs.py
depnova/plugins/mergers/: merger.py
depnova/plugins/reporters/: __init__.py  report.py
depnova/plugins/scanners/: __init__.py  frontend.py  lockfile.py  manifest.py  os_packages.py  syft.py
depnova/plugins/validators/: __init__.py
depnova/utils/: __init__.py  logger.py
